# dwolla-rs

./: Cargo.toml  README.md
examples/: add_beneficial_owner.rs  add_ledger_entry.rs  answer_kba_questions.rs  by_id_3.rs  change_ownership_status.rs  create_account_funding_source.rs  create_authorization.rs  create_customer.rs  create_customer_funding_source.rs  create_customer_funding_sources_token.rs  create_funding_source.rs  create_funding_sources_token.rs  create_label.rs  create_mass_payment.rs  create_transfer.rs  create_webhook_subscription.rs  delete_by_id.rs  get_account.rs  get_account_funding_sources.rs  get_account_iav_token.rs  get_account_mass_payments.rs  get_account_transfers.rs  get_balance.rs  get_beneficia_owner_documents.rs  get_beneficial_owner.rs  get_business_classification.rs  get_customer.rs  get_customer_documents.rs  get_customer_funding_sources.rs  get_customer_iav_token.rs  get_customer_mass_payments.rs  get_customer_notifications.rs  get_customer_transfers.rs  get_document.rs  get_event.rs  get_fees_by_source.rs  get_funding_source.rs  get_funding_sources.rs  get_kba_session.rs  get_label.rs  (+37 more)
specs/: openapi.yaml
src/: lib.rs  model.rs  request.rs
src/model/: add_beneficial_owner_required.rs  address.rs  amount.rs  answer.rs  answered_kba_question.rs  create_webhook.rs  mass_payment_item_request_body.rs  money.rs  passport.rs  reallocate_label_required.rs  webhook.rs  webhook_attempt.rs  webhook_header.rs  webhook_http_request.rs
src/request/: add_beneficial_owner.rs  add_ledger_entry.rs  answer_kba_questions.rs  by_id_3.rs  (+68 more)
