[package]
name = "dwolla"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Dwolla bindings for Rust"
repository = "https://github.com/iJustErikk/dwolla-rs"

[dependencies]
base64 = "0.21.5"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
futures-core = "0.3.28"
progenitor-client = "0.4.0"
regress = "0.7.1"
reqwest = { version = "0.11.20", default-features=false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = {version="1.33.0", features = ["macros", "rt-multi-thread"] }

[[example]]
path = "examples/root.rs"
name = "root"
edition = "2021"
required-features = []


[[example]]
path = "examples/search.rs"
name = "search"
edition = "2021"
required-features = []

[[example]]
path = "examples/create_customer.rs"
name = "create_customer"
edition = "2021"
required-features = []

[[example]]
path = "examples/create_funding_source.rs"
name = "create_funding_source"
edition = "2021"
required-features = []

[[example]]
path = "examples/get_balance.rs"
name = "get_balance"
edition = "2021"
required-features = []

[[example]]
path = "examples/get_funding_sources.rs"
name = "get_funding_sources"
edition = "2021"
required-features = []

[[example]]
path = "examples/get_transfers.rs"
name = "get_transfers"
edition = "2021"
required-features = []
